# imario-benchmark

./: .gitignore  CHANGELOG.md  DATA_LICENSE.md  LICENSE  METHODOLOGY.md  README.md  benchmark.md  pyproject.toml  score.py
.github/workflows/: ci.yml
data/: SENSITIVE_EXCLUDED.md  checksums.sha256
data/extraction/: anes_process.py  cgss_process.py  pew_process.py  pew_us_process.py  so_process.py
data/processed/: anes_2024_full.json  cgss_2023_full.json  pew_US_full.json  pew_global_2025_full.json  stackoverflow_2025_full.json
results/: README.md
results/prod_v1/: distributions_Australia.json  distributions_Brazil.json  distributions_CN.json  distributions_France.json  distributions_Germany.json  distributions_India.json  distributions_Japan.json  distributions_SO.json  distributions_SouthKorea.json  distributions_UK.json  distributions_US_pew.json  distributions_qual_US.json  run_meta.json  scores_qual_US.json  scores_quant_Australia.json  scores_quant_Brazil.json  scores_quant_CN.json  scores_quant_France.json  scores_quant_Germany.json  scores_quant_India.json  scores_quant_Japan.json  scores_quant_SO.json  scores_quant_SouthKorea.json  scores_quant_UK.json  scores_quant_US_pew.json
site/: accuracy.html
tools/: build_verification_bundle.py
verification/: README.md
verification/Australia/: personas.json  questions.json  real_distribution.json  synthetic_answers.jsonl
verification/Brazil/: personas.json  questions.json  real_distribution.json  synthetic_answers.jsonl
verification/CN/: personas.json  questions.json  real_distribution.json  (+1 more)
(+43 files in other folders)
